--- a/style.css
+++ b/style.css
@@ -6,9 +6,89 @@
 body{
 	font-size: 20px;
 	overflow-x: hidden;
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif;
 
 }
+.container{
+	position: relative;
+	width: 1200px;
+	height: 300px;
+	margin: 240px auto;
+	
 
+}
+.container .box
+{
+	position: relative;
+	width: calc(400px - 30px);
+	height: calc(300px - 30px);
+	background: #ff0;
+	float: left;
+	margin: 15px;
+	box-sizing: border-box;
+	overflow: hidden;
+	border-radius: 10px;
+
+
+}
+.container .box .icon{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #f00;
+	transition: 0.5s;
+	z-index: 1;
+
+}
+.container .box:hover .icon{
+	top: 20px;
+	left: calc(50% - 40px);
+	width: 80px;
+	height: 80px;
+	border-radius: 50%;
+}
+.container .box .icon .fa{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	font-size: 80px;
+	transition: 0.5s;
+	color: #fff;
+
+}
+.container .box:hover .icon .fa{
+	font-size: 40px;
+}
+.container .box .content{
+	position: absolute;
+	top: 100%;
+	height: calc(100% - 100px);
+	text-align: center;
+	padding: 20px;
+	box-sizing: border-box;
+	transition: 0.5s;
+	opacity: 0;
+}
+.container .box:hover .content{
+	top: 100px;
+	opacity: 1;
+}
+.container .box .content h3{
+	margin: 0 0 10px;
+	padding: 0;
+	color: #fff;
+	font-size: 24px;
+}
+.container .box .content p{
+	margin: 0;
+	padding: 0;
+	color: #fff;
+}
 header{
 	background-image: url('header.jpg');
 	background-size: cover;
@@ -38,7 +118,8 @@ header{
 }
 .main-nav{
 	float: center;
-	padding:2rem;
+	padding:2rem ;
+
 
 }
 .booking{
@@ -117,4 +198,32 @@ a:visited{
 .main-content h1{
 	text-overflow: ellipsis;
 	overflow:hidden;
+}
+h4{
+	text-align: center;
+
+}
+h6{
+	text-align: center;
+}
+.container .box:nth-child(1) .icon{
+	background: #319635;
+}
+
+.container .box:nth-child(1) {
+	background: #4caf50;
+}
+.container .box:nth-child(2) .icon{
+	background: #d03852;
+}
+
+.container .box:nth-child(2) {
+	background: #f54967;
+}
+.container .box:nth-child(3) .icon{
+	background: #23798e;
+}
+
+.container .box:nth-child(3) {
+	background: #328fa5;
 }
