--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@ body{
 .container .box
 {
 	position: relative;
-	width: calc(400px - 30px);
-	height: calc(300px - 30px);
+	width: calc(300px - 30px);
+	height: calc(200px - 30px);
 	background: #ff0;
 	float: left;
 	margin: 15px;
@@ -226,4 +226,39 @@ h6{
 
 .container .box:nth-child(3) {
 	background: #328fa5;
+}
+.container .box:nth-child(4) .icon{
+	background: #d03852;
+}
+
+.container .box:nth-child(4) {
+	background: #f54967;
+}
+.container .box:nth-child(5) .icon{
+	background: #319635;
+}
+
+.container .box:nth-child(5) {
+	background: #4caf50;
+}
+.container .box:nth-child(6) .icon{
+	background: #d03852;
+}
+
+.container .box:nth-child(6) {
+	background: #f54967;
+}
+.container .box:nth-child(7) .icon{
+	background: #23798e;
+}
+
+.container .box:nth-child(7) {
+	background: #328fa5;
+}
+.container .box:nth-child(8) .icon{
+	background: #d03852;
+}
+
+.container .box:nth-child(8) {
+	background: #f54967;
 }
