--- a/style.css
+++ b/style.css
@@ -3,6 +3,47 @@
 	padding: 0px;
 	box-sizing: border-box;
 }
+.container-main{
+	position: relative;
+	width: 1200px;
+	height: 200px;
+	margin: 30px auto;
+}
+.container-main .box{
+	position: relative;
+	width: calc(1200px - 30px);
+	height: calc(200px - 30px);
+	background: #FFA500;
+	float: left;
+	margin: 15px;
+	box-sizing: border-box;
+	overflow: hidden;
+	border-radius: 10px;
+
+}
+.youtube{
+	position: relative;
+	width: 1200px;
+	height: 200px;
+	margin: 30px auto;
+}
+
+.youtube .box
+{
+	position: relative;
+	width: calc(400px - 30px);
+	height: calc(300px - 30px);
+	background: #000000;
+	float: left;
+	margin: 15px;
+	box-sizing: border-box;
+	overflow: hidden;
+	border-radius: 10px;
+
+
+
+}
+
 body{
 	font-size: 20px;
 	overflow-x: hidden;
@@ -14,17 +55,17 @@ body{
 .container{
 	position: relative;
 	width: 1200px;
-	height: 300px;
-	margin: 240px auto;
+	height: 600px;
+	margin: 40px auto;
 	
 
 }
 .container .box
 {
 	position: relative;
-	width: calc(300px - 30px);
-	height: calc(200px - 30px);
-	background: #ff0;
+	width: calc(400px - 30px);
+	height: calc(300px - 30px);
+	background: #328fa5 ;
 	float: left;
 	margin: 15px;
 	box-sizing: border-box;
@@ -32,14 +73,16 @@ body{
 	border-radius: 10px;
 
 
+
 }
+
 .container .box .icon{
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: #f00;
+	background:  #fff;
 	transition: 0.5s;
 	z-index: 1;
 
@@ -58,7 +101,7 @@ body{
 	transform: translate(-50%,-50%);
 	font-size: 80px;
 	transition: 0.5s;
-	color: #fff;
+	color:  #fff;
 
 }
 .container .box:hover .icon .fa{
@@ -81,7 +124,7 @@ body{
 .container .box .content h3{
 	margin: 0 0 10px;
 	padding: 0;
-	color: #fff;
+	color:  #fff;
 	font-size: 24px;
 }
 .container .box .content p{
@@ -121,6 +164,19 @@ header{
 	padding:2rem ;
 
 
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
 }
 .booking{
 	float: right;
@@ -207,18 +263,18 @@ h6{
 	text-align: center;
 }
 .container .box:nth-child(1) .icon{
-	background: #319635;
+	background: #23798e;
 }
 
 .container .box:nth-child(1) {
-	background: #4caf50;
+	background:##328fa5;
 }
 .container .box:nth-child(2) .icon{
-	background: #d03852;
+	background: #23798e;
 }
 
 .container .box:nth-child(2) {
-	background: #f54967;
+	background: #328fa5;
 }
 .container .box:nth-child(3) .icon{
 	background: #23798e;
@@ -228,37 +284,23 @@ h6{
 	background: #328fa5;
 }
 .container .box:nth-child(4) .icon{
-	background: #d03852;
+	background: #23798e;
 }
-
 .container .box:nth-child(4) {
-	background: #f54967;
+	background:##328fa5;
 }
 .container .box:nth-child(5) .icon{
-	background: #319635;
-}
-
-.container .box:nth-child(5) {
-	background: #4caf50;
-}
-.container .box:nth-child(6) .icon{
-	background: #d03852;
-}
-
-.container .box:nth-child(6) {
-	background: #f54967;
-}
-.container .box:nth-child(7) .icon{
 	background: #23798e;
 }
 
-.container .box:nth-child(7) {
+.container .box:nth-child(5) {
 	background: #328fa5;
 }
-.container .box:nth-child(8) .icon{
-	background: #d03852;
+.container .box:nth-child(6) .icon{
+	background: #23798e;
 }
 
-.container .box:nth-child(8) {
-	background: #f54967;
+.container .box:nth-child(6) {
+	background: #328fa5;
 }
+
